# jobsy

./: .gitignore  404.html  CNAME  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  about.html  category.html  contact.html  create-listing.html  dashboard.html  disclosure.html  edit-profile.html  index.html  login.html  messages.html  privacy.html  provider.html  robots.txt  sitemap.xml  terms.html
assets/: index-6_vBTSBU.css  index-B0EOabPw.js  index-B8usDxwg.js  index-BMT_08_V.css  index-BMYIXAky.js  index-BVGt1maS.css  index-Bbu3-JUO.js  index-BiUeng6S.js  index-Bo5IiiWF.css  index-CJqggHly.js  index-CffYU6vO.js  index-CjZbPyYW.js  index-Cp2nlnAj.js  index-D6AguBH9.js  index-DOJaBIlc.js  index-DP94RESL.css  index-DaaDgirZ.js  index-DcJgL3KE.css  index-DmVCm5Hh.js  index-G2sQhlWV.js  index-H9-_t7di.js  index-LNpibhuc.css  index-UnWxnoXX.css  index-YztPa1p2.js  index-_q4psLSI.js  index-eSqGw8Xc.css
bot/: .env.example  Dockerfile  README.md  config.py  database.py  earnings.py  main.py  notifier.py  requirements.txt  sample_watchlist.txt  scraper.py  telegram_bot.py  tracker.py  url_safety.py
categories/: audio.html  chatbots.html  coding.html  design.html  image.html  marketing.html  productivity.html  video.html  writing.html
css/: style.css
jobsy/: Makefile  (+7 more)
jobsy-main/jobsy/shared/: __init__.py  auth.py  cache.py  circuit_breaker.py  config.py  email_templates.py  email_utils.py  events.py  geo.py  logging_utils.py  oauth.py  pyproject.toml  resilience.py
jobsy-main/jobsy/shared/models/: __init__.py  event.py  match.py  provider.py  user.py  verification.py
(+714 files in other folders)
