[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsy-shared"
version = "0.1.0"
description = "Shared library for Jobsy microservices"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "GeoAlchemy2>=0.14.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aio-pika>=9.3.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]
